--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>DogeBox</title>
+	<title>TurboBox</title>
 	<meta name="application-name" content="DogeBox" />
 	<meta name="apple-mobile-web-app-title" content="DogeBox">
 	<meta name="description" content="DogeBox is an online tool for sketching and sharing instrumental melodies." />
