--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 				TurboBox
 			</h1>
 			<p id="introduction">
-				I have no idea what im doing.
-				Read the orginal beepox description.
+				If you don't know what this is, this is just a modified version of BeepBox with
+				more waves, more instruments and a different color scheme.
 			</p>
 			<p>
 				All song data is contained in the URL at the top of your browser. 
